tests/programs/taint/a4-test-cases/fail/taint_simple_fail2.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let a = secure() in
  let b = (a + 1) as float in
  println(float_to_string(b))  
}